# medical-ai

./: .env.example  .gitignore  DETAILED_NOTEBOOK_ANALYSIS.md  DIABETES_MODEL_GUIDE.md  IMPLEMENTATION_ACTION_PLAN.md  MLOPS_AIOPS_INTEGRATION_GUIDE.md  MLOPS_AIOPS_SUMMARY.md  PIPELINE_STATUS_REPORT.md  PROJECT_TECHNICAL_ARCHITECTURE.md  QUICK_START.md  README.md  SYSTEM_VERIFICATION.md  TECHNICAL_PRESENTATION.md  TECHNICAL_PRESENTATION_REWORKED.md  TEST_CASES_REFERENCE.md  docker-compose.yml  pnpm-workspace.yaml  presentation content.md  stress-test-monitoring.sh  test-mlops-complete.sh  test-mlops.sh  test_autism_parser.py  test_autism_prediction_simple.py  test_with_gradio_schema.py
ai-service/: .dockerignore  Dockerfile.ai  MLOPS_AIOPS_EXAMPLE.py  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
ai-service/.venv311/: pyvenv.cfg
ai-service/.venv311/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
ai-service/app/: .gitkeep  main.py
ai-service/app/autism-DL/: README.md  app.py  check_device.py  data_exploration.ipynb  evaluate_model.py  final deep learning autism.ipynb  showImg.py  testSingle.py  train_kaggle.py  train_local.py
ai-service/app/autism-prediction/: app.py
ai-service/app/extraction_templates/: autism.json  diabetes.json  heart.json  index.json  kidney.json  liver.json  stroke.json
ai-service/app/knowledge_graph/: __init__.py  kg_builder.py  kg_queries.py  kg_schema.py  kg_service.py  neo4j_driver.py
ai-service/app/models/: gateway_schema.py  llm_schema.py  schemas.py  (+3 more)
ai-service/legacy/: README.md
(+312 files in other folders)
