[project]
name = "medai-ai-service"
version = "0.1.0"
description = "AI Intelligence Layer for MedAI Nexus"
authors = [
    {name = "MedAI Team", email = "team@medai.example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.3",
    "python-dotenv>=1.0.0",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "scikit-learn>=1.3.2",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "langchain>=0.0.350",
    "openai>=0.27.8",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.7.0",
    "neo4j>=5.13.0",
    "pillow>=10.0.1",
    "pytesseract>=0.3.10",
    "PyPDF2>=3.0.1",
    "spacy>=3.7.2",
    "nltk>=3.8.1",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
